--- a/style.css
+++ b/style.css
@@ -52,3 +52,9 @@ grafico {
     width: 100%;
     height: 400px;
 }
+
+/* Change selector to use 'graph' instead of 'grafico' for proper functionality */
+.graph {
+    width: 100%;
+    height: 400px;
+}
